Improving parsing and some parameters